# wgms3d

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: build-test.yml
doc/: index.html  installation.html
include/: fortran_interface.h  solver.h  wgms3d.h
src/: diffops.cc  libwgms3d.cc  main.cc  solver_slepc.cc  solver_superlu_arpack.cc  wgms3d.cc
tests/cmake/: check_fiber_convergence.py
tests/fiber_convergence/: lpmodes.py
tools/: bin_to_hdf5.py
